fixing inconsistent spacing

--- a/src/static/css/style.css
+++ b/src/static/css/style.css
@@ -42,6 +42,12 @@ form {
 }
 
 label,
+input,
+button {
+    vertical-align: top;
+}
+
+label,
 button {
     display: block;
     font-size: 1.1em;
